--- a/CoreUtilities/LJCDataUtility/LJCDataUtility/Forms/DataUtilityList.resx
+++ b/CoreUtilities/LJCDataUtility/LJCDataUtility/Forms/DataUtilityList.resx
@@ -138,6 +138,9 @@
   <metadata name="MainSplit.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="ljcHeaderBox1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="TableGrid.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
